# quanta-forecast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  DFD.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  THINK.md  USECASES.md
examples/: benchmark_airline.py  chronos_zeroshot.py
scripts/: benchmark.py
src/quanta/: __init__.py  base.py  cli.py  registry.py
src/quanta/api/: main.py
src/quanta/data/: __init__.py  loaders.py
src/quanta/eval/: __init__.py  backtest.py  metrics.py
src/quanta/features/: __init__.py  lag.py
src/quanta/models/: __init__.py  arima.py  deep.py  foundation.py  ml.py  naive.py  smoothing.py
streamlit_app/: app.py
tests/: conftest.py  test_api.py  test_arima.py  test_backtest.py  test_base.py  test_cli.py  test_data.py  test_features.py  test_lightgbm.py  test_metrics.py  test_naive.py  test_registry.py  test_smoke.py  test_smoothing.py
web/: README.md  next.config.mjs  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: forecast-chart.tsx  metric-card.tsx
web/src/lib/: api.ts  types.ts  utils.ts
