[project]
name = "quanta-forecast"
version = "0.1.0"
description = "Multi-model time series forecasting toolkit — classical + ML + deep + foundation"
authors = [{ name = "Rushil Kaul", email = "theruka007@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.1",
    "polars>=1.12",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "rich>=13.9",
    "plotly>=5.24",
    "typer>=0.13",
]

[project.optional-dependencies]
classical = [
    "statsforecast>=1.7",
    "prophet>=1.1",
]
ml = [
    "mlforecast>=0.14",
    "lightgbm>=4.5",
]
deep = [
    "darts>=0.30",
    "neuralforecast>=1.7",
]
foundation = [
    "transformers>=4.46",
    "chronos-forecasting>=1.4",
    "torch>=2.5",
]
demo = [
    "streamlit>=1.40",
    "yfinance>=0.2",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[project.scripts]
quanta = "quanta.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quanta"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=quanta --cov-report=term-missing"
